smo logo issues, spacing issues between forms, course details banner issues

--- a/app/assets/styles/modules/_coursePageBannerSection.scss
+++ b/app/assets/styles/modules/_coursePageBannerSection.scss
@@ -1,12 +1,13 @@
 .course-banner {
     position: relative;
     color: #fff; 
-    padding: 1.2rem 0;
+    padding: 0 0 1.2rem 0;
 //max-height: 430px;
     box-sizing: border-box;
   //overflow: hidden;
 // z-index:99;
 min-height: 425px;
+top:10px;
 
 a {color:#fff;}
 
